--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--Contains both the fragment-->
     <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_marginStart="40sp"
-            android:layout_marginEnd="40sp"
-            android:layout_height="20sp"
-            android:layout_marginBottom="70sp"
-            android:layout_gravity="bottom"
-            app:menu="@menu/bottom_nav"
-            android:background="@drawable/bottom_background"/>
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="10sp"
-            android:layout_marginStart="40sp"
-            android:layout_marginEnd="40sp"
-            android:background="#fff"/>
-
     </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bottom_background"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="40sp"
+        android:layout_marginEnd="40sp"
+        app:menu="@menu/bottom_nav"
+        app:itemTextColor="@color/bot_nav_color"
+        android:layout_marginBottom="40sp"/>
 
 </RelativeLayout>
