Added two meditation channels

--- a/app/src/main/res/layout/meditation_fragment.xml
+++ b/app/src/main/res/layout/meditation_fragment.xml
@@ -1,12 +1,341 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#fff">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Meditation"
-        android:textSize="40sp"
-        android:layout_centerInParent="true"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/meditation_image"
+            android:layout_width="350sp"
+            android:src="@drawable/focus"
+            android:layout_marginStart="20sp"
+            android:scaleType="centerCrop"
+            android:paddingBottom="20sp"
+            android:paddingTop="20sp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="350sp"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Meditation"
+            android:textSize="35sp"
+            android:layout_alignParentEnd="true"
+            android:layout_above="@id/channel1"
+            android:layout_marginBottom="30sp"
+            android:layout_marginEnd="35sp"/>
+
+        <TextView
+            android:id="@+id/channel1"
+            android:layout_below="@id/meditation_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Channel 1"
+            android:textSize="20sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginBottom="15sp"
+            android:background="@drawable/bottom_background"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            android:paddingStart="10sp"
+            android:paddingEnd="30sp"/>
+
+        <HorizontalScrollView
+            android:id="@+id/channel_card"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="10sp"
+            android:layout_below="@id/channel1"
+            android:layout_marginBottom="20sp"
+            android:layout_height="wrap_content">
+
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:rowCount="1">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    app:cardElevation="10dp"
+                    android:layout_gravity="fill"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    app:cardBackgroundColor="#fff"
+                    android:id="@+id/focus1_meditation"
+                    app:cardCornerRadius="20sp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+
+                        <ImageView
+                            android:layout_width="130sp"
+                            android:layout_height="130sp"
+                            android:src="@drawable/focus"
+                            android:scaleType="centerCrop"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Padmasana"
+                            android:layout_gravity="bottom"
+                            android:textAlignment="center"
+                            android:textColor="#000000"
+                            android:textSize="18sp"
+                            android:layout_marginTop="12dp"/>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    app:cardElevation="10dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    app:cardBackgroundColor="#fff"
+                    android:background="@color/colorPrimary"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:id="@+id/mindfulness1_meditation"
+                    app:cardCornerRadius="20dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="130sp"
+                            android:layout_height="130sp"
+                            android:scaleType="centerCrop"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Padmasana"
+                            android:layout_gravity="center"
+                            android:textColor="#000000"
+                            android:textSize="18sp"
+                            android:layout_marginTop="12dp"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    app:cardElevation="10dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    app:cardBackgroundColor="#fff"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:id="@+id/spiritual1_meditation"
+                    app:cardCornerRadius="20dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="130sp"
+                            android:layout_height="130sp"
+                            android:scaleType="centerCrop"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Padmasana"
+                            android:layout_gravity="center"
+                            android:textColor="#000000"
+                            android:textSize="18sp"
+                            android:layout_marginTop="12dp"/>
+
+
+
+                    </LinearLayout>
+
+
+
+
+                </androidx.cardview.widget.CardView>
+
+            </GridLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </HorizontalScrollView>
+
+        <TextView
+            android:id="@+id/channel2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/channel_card"
+            android:layout_marginStart="20sp"
+            android:layout_marginBottom="15sp"
+            android:background="@drawable/bottom_background"
+            android:paddingStart="10sp"
+            android:paddingEnd="30sp"
+            android:text="Channel 2"
+            android:textColor="#fff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <HorizontalScrollView
+            android:id="@+id/channel2_card"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="10sp"
+            android:layout_below="@id/channel2"
+            android:layout_marginBottom="50sp"
+            android:layout_height="wrap_content">
+
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:rowCount="1">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    app:cardElevation="10dp"
+                    android:layout_rowWeight="1"
+                    app:cardBackgroundColor="#fff"
+                    android:layout_columnWeight="1"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:id="@+id/focus_meditation"
+                    app:cardCornerRadius="20sp">
+
+                    <ImageView
+                        android:id="@+id/padmasana_image"
+                        android:layout_width="130sp"
+                        android:layout_height="130sp"
+                        android:scaleType="centerCrop"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Padmasana"
+                        android:layout_gravity="bottom"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        android:layout_marginTop="12dp"/>
+
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    app:cardElevation="10dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    app:cardBackgroundColor="#fff"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:id="@+id/mindfulness_meditation"
+                    app:cardCornerRadius="20dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="130sp"
+                            android:layout_height="130sp"
+                            android:scaleType="centerCrop"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Padmasana"
+                            android:layout_gravity="center"
+                            android:textColor="#000000"
+                            android:textSize="18sp"
+                            android:layout_marginTop="12dp"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    app:cardElevation="10dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    app:cardBackgroundColor="#fff"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:id="@+id/spiritual_meditation"
+                    app:cardCornerRadius="20dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="130sp"
+                            android:layout_height="130sp"
+                            android:scaleType="centerCrop"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Padmasana"
+                            android:layout_gravity="center"
+                            android:textColor="#000000"
+                            android:textSize="18sp"
+                            android:layout_marginTop="12dp"/>
+
+
+
+                    </LinearLayout>
+
+
+
+
+                </androidx.cardview.widget.CardView>
+
+            </GridLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </HorizontalScrollView>
+
+    </RelativeLayout>
+
+
+
+</ScrollView>
