--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,13 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bottom_background"
+        android:background="#cfe1e9"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="40sp"
         android:layout_marginEnd="40sp"
         app:menu="@menu/bottom_nav"
-        app:itemTextColor="@color/bot_nav_color"
+        app:itemTextColor="#4F7282"
+        android:textStyle="bold"
         android:layout_marginBottom="40sp"/>
 
 </RelativeLayout>
