--- a/app/src/main/res/layout/meditation_fragment.xml
+++ b/app/src/main/res/layout/meditation_fragment.xml
@@ -12,7 +12,6 @@
         <ImageView
             android:id="@+id/meditation_image"
             android:layout_width="350sp"
-            android:src="@drawable/focus"
             android:layout_marginStart="20sp"
             android:scaleType="centerCrop"
             android:paddingBottom="20sp"
@@ -24,12 +23,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Meditation"
-            android:textSize="35sp"
-            android:layout_alignParentEnd="true"
             android:layout_above="@id/channel1"
-            android:layout_marginBottom="30sp"
-            android:layout_marginEnd="35sp"/>
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="35dp"
+            android:layout_marginBottom="31dp"
+            android:text="Meditation"
+            android:textSize="35sp" />
 
         <TextView
             android:id="@+id/channel1"
@@ -79,7 +78,6 @@
                         <ImageView
                             android:layout_width="130sp"
                             android:layout_height="130sp"
-                            android:src="@drawable/focus"
                             android:scaleType="centerCrop"/>
 
                         <TextView
