--- a/app/src/main/res/layout/meditation_fragment.xml
+++ b/app/src/main/res/layout/meditation_fragment.xml
@@ -16,6 +16,7 @@
             android:scaleType="centerCrop"
             android:paddingBottom="20sp"
             android:paddingTop="20sp"
+            android:src="@drawable/focus"
             android:layout_centerHorizontal="true"
             android:layout_height="350sp"/>
 
@@ -26,6 +27,7 @@
             android:layout_above="@id/channel1"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="35dp"
+            android:textColor="#4F7282"
             android:layout_marginBottom="31dp"
             android:text="Meditation"
             android:textSize="35sp" />
@@ -39,7 +41,7 @@
             android:textSize="20sp"
             android:layout_marginStart="20sp"
             android:layout_marginBottom="15sp"
-            android:background="@drawable/bottom_background"
+            android:background="@drawable/channel_background"
             android:textStyle="bold"
             android:textColor="#fff"
             android:paddingStart="10sp"
@@ -50,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_marginStart="10sp"
             android:layout_below="@id/channel1"
+            android:scrollbars="none"
             android:layout_marginBottom="20sp"
             android:layout_height="wrap_content">
 
@@ -78,6 +81,7 @@
                         <ImageView
                             android:layout_width="130sp"
                             android:layout_height="130sp"
+                            android:src="@drawable/focus"
                             android:scaleType="centerCrop"/>
 
                         <TextView
@@ -115,6 +119,7 @@
                         <ImageView
                             android:layout_width="130sp"
                             android:layout_height="130sp"
+                            android:src="@drawable/mindfullness"
                             android:scaleType="centerCrop"/>
 
                         <TextView
@@ -148,6 +153,7 @@
                         <ImageView
                             android:layout_width="130sp"
                             android:layout_height="130sp"
+                            android:src="@drawable/focus"
                             android:scaleType="centerCrop"/>
 
                         <TextView
@@ -171,17 +177,6 @@
             </GridLayout>
 
 
-
-
-
-
-
-
-
-
-
-
-
         </HorizontalScrollView>
 
         <TextView
@@ -191,7 +186,7 @@
             android:layout_below="@id/channel_card"
             android:layout_marginStart="20sp"
             android:layout_marginBottom="15sp"
-            android:background="@drawable/bottom_background"
+            android:background="@drawable/channel_background"
             android:paddingStart="10sp"
             android:paddingEnd="30sp"
             android:text="Channel 2"
@@ -203,6 +198,7 @@
             android:id="@+id/channel2_card"
             android:layout_width="wrap_content"
             android:layout_marginStart="10sp"
+            android:scrollbars="none"
             android:layout_below="@id/channel2"
             android:layout_marginBottom="50sp"
             android:layout_height="wrap_content">
@@ -228,7 +224,8 @@
                         android:id="@+id/padmasana_image"
                         android:layout_width="130sp"
                         android:layout_height="130sp"
-                        android:scaleType="centerCrop"/>
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/focus" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -263,7 +260,8 @@
                         <ImageView
                             android:layout_width="130sp"
                             android:layout_height="130sp"
-                            android:scaleType="centerCrop"/>
+                            android:scaleType="centerCrop"
+                            app:srcCompat="@drawable/mindfullness" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -296,7 +294,8 @@
                         <ImageView
                             android:layout_width="130sp"
                             android:layout_height="130sp"
-                            android:scaleType="centerCrop"/>
+                            android:scaleType="centerCrop"
+                            app:srcCompat="@drawable/focus" />
 
                         <TextView
                             android:layout_width="wrap_content"
