--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,13 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#cfe1e9"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="40sp"
         android:layout_marginEnd="40sp"
         app:menu="@menu/bottom_nav"
         app:itemTextColor="#4F7282"
         android:textStyle="bold"
-        android:layout_marginBottom="50sp"/>
+        android:layout_marginBottom="30sp"/>
 
 </RelativeLayout>
