--- a/app/src/main/res/layout/yoga_fragment.xml
+++ b/app/src/main/res/layout/yoga_fragment.xml
@@ -481,6 +481,7 @@
                         android:id="@+id/padmasana_image"
                         android:layout_width="130sp"
                         android:layout_height="130sp"
+                        android:src="@drawable/mindfullness"
                         android:scaleType="centerCrop"/>
 
                     <TextView
@@ -516,7 +517,8 @@
                         <ImageView
                             android:layout_width="130sp"
                             android:layout_height="130sp"
-                            android:scaleType="centerCrop"/>
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/mindfullness"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -549,7 +551,8 @@
                         <ImageView
                             android:layout_width="130sp"
                             android:layout_height="130sp"
-                            android:scaleType="centerCrop"/>
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/mindfullness"/>
 
                         <TextView
                             android:layout_width="wrap_content"
