--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textSize">20sp</item><!-- text size in menu-->
+    </style>
+
+    <style name="NavigationDrawerStyle">
+
+        <item name="android:textSize">200sp</item><!-- text size in menu-->
+
     </style>
 
 </resources>
