--- a/app/src/main/res/color/bot_nav_color.xml
+++ b/app/src/main/res/color/bot_nav_color.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--To define checked and unchecked state-->
-    <item android:state_checked="true" android:color="#000" />
+    <item android:state_checked="true" android:color="#4F7282" />
 
-    <item android:state_checked="false" android:color="#fff"/>
+    <item android:color="#929292"/>
 
 </selector>
