--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,29 @@
 
     <!--Contains both the fragment-->
 
-
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation">
+        android:layout_height="match_parent">
     </FrameLayout>
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="200sp"
+        android:layout_height="30sp"
+        app:iconifiedByDefault="false"
+        android:layout_alignParentTop="true"
+        app:queryHint="Search here"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10sp"
+        android:background="@drawable/search_bg"/>
+
+    <ListView
+        android:layout_below="@id/search_view"
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -23,11 +39,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="@drawable/bottom_background"
         android:layout_marginStart="40sp"
         android:layout_marginEnd="40sp"
         app:menu="@menu/bottom_nav"
-        app:itemTextColor="#4F7282"
+        app:itemTextColor="@color/bottom_nav_text_color"
         android:textStyle="bold"
         android:layout_marginBottom="30sp"/>
 
